fix: Resolved CORS issues and handled expired JWT tokens gracefully
- Updated SecurityConfig to explicitly allow OPTIONS requests (preflight checks) for all endpoints.
- Configured CORS source to allow standard methods (GET, POST, PUT, DELETE, OPTIONS) and headers.
- Refactored JwtAuthenticationFilter to catch token expiration exceptions silently, allowing "Anonymous" access to public endpoints (like /movies) instead of blocking the request with a 403 error.